apps/downward/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: downward-example
  namespace: downward
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`downward.misery.systems`)
      kind: Rule
      services:
        - name: downward-example
          port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: downward-example
  namespace: downward
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: downward-example
