apps/downward/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: downward-example
  namespace: downward
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  selector:
    app: downward-example
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: downward-example
  namespace: downward
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - downward.misery.systems
      secretName: downward-example-tls
  rules:
    - host: downward.misery.systems
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: downward-example
                port:
                  number: 8080
